2021-12-03

        * Version 2.0.0 released
        ========================

        Remove GCOMSelection::zeta_min() and GCOMSelection::zeta_max()
          methods
	Add GCOMSelection::fpmtflag(), GCOMSelection::use_d1() and 
          GCOMSelection::use_d2() methods (#3917)
        Add GCOMModelDRBPhibarBins class (#3913)
        Compute spectral model gradients for negative factor values
        Add likelihood fit event selection hook (#3912)
        Add GCOMModelDRM class (#3910)
        Add angle(GVector&,GVector&) friend function (#3908)
        Make extension name check case insensitive in GFits::extno()
        Add numerical gradient step size member to GObservation
        Add stamp() methods to GApplication (#3662)
        Add ASCL shield to "About" page (#3630)
        Add GModelSpectralFunc spectral constructor (#3626)
        Add GModelSpectralBins class (#3606)
        Add carbon footprint estimation to GApplication (#3592)
        Add phase selection to GCOMSelection and GCOMDri (#3564)
        Fix incompatibility in GMatrixSparse::mix_column_prepare() method (#3563)
        Add missing members to GOptimizerLM::copy_members() method
        Store DRB, DRG and DRX as GCOMDri in GCOMObservation (#3560)
        Implement COMPTEL response for diffuse models (#3558)
        Implement COMPTEL background model computation (#3557)
        Fix reading of scaled FITS columns, remove GFitsTableCol::scale() method (#3553)
        Add gammalib::compare() function (#3552)
        Add DRI constructor to GCOMObservation class
        Add member access methods to GCOMDri class
        Implement ToF correction for COMPTEL EVP version 2 datasets (#3549)
        Implement ToF correction in IRF computation (#3548)
        Correct COMPTEL average deadtime to 0.965 (#3547)
        Fix handling of empty matrix objects (#3541)
        Add methods to GCOMObservation class to access DRI filenames
        Add GModelSpectralFunc methods to build file function in memory (#3535)