@@ -1,8 +1,9 @@
-2021-12-03
+2021-12-13
 
         * Version 2.0.0 released
         ========================
 
+        Add GCOMObservation::tim() and GCOMObservation::oads() setter methods
         Remove GCOMSelection::zeta_min() and GCOMSelection::zeta_max()
           methods
 	Add GCOMSelection::fpmtflag(), GCOMSelection::use_d1() and 
